# internal/transport/http/server.go
@@ -65,11 +65,13 @@ func (s *Server) Router() http.Handler {
 			r.Get("/creators", s.listCreators)
 			r.With(s.require("ADMIN", "ANALYST")).Post("/creators", s.createCreator)
 			r.Get("/creators/{id}", s.getCreator)
+			r.Get("/creators/{id}/history", s.listCreatorHistory)
 			r.With(s.require("ADMIN", "ANALYST")).Patch("/creators/{id}", s.updateCreator)
 			r.With(s.require("ADMIN", "ANALYST")).Patch("/creators/{id}/work-status", s.updateCreatorWorkStatus)
 			r.Get("/creators/{id}/credentials", s.listCreatorCredentials)
 			r.With(s.require("ADMIN", "ANALYST")).Put("/creators/{id}/credentials", s.saveCreatorCredentials)
 			r.With(s.require("ADMIN")).Post("/creators/{id}/credentials/{credentialID}/reveal", s.revealCreatorCredential)
+			r.With(s.require("ADMIN")).Post("/creators/{id}/history/changes/{changeID}/reveal", s.revealCreatorHistoryCredential)
 			r.Get("/creators/{id}/accounts", s.listCreatorAccounts)
 			r.With(s.require("ADMIN", "ANALYST")).Post("/creators/{id}/accounts", s.createCreatorAccount)
 			r.With(s.require("ADMIN", "ANALYST")).Post("/creators/{id}/connections/{platform}/authorize", s.oauthAuthorize)
